[package]
name = "tcs-8000"
version = "0.1.0"
edition = "2021"
authors = ["Drew Wibbenmeyer <drako0812@gmail.com>"]
repository = "https://github.com/drako0812/tcs-8000"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib-ffi = "*"

